2017-05-10  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Tools/gdomap.c (nameServer, donames): Fix incorrect use
	addresses returned from getaddrinfo.

2017-04-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSOutput.m: When generating class/method links, treat '['
	as the start of a class/method only if it's the start of a comment
	or is preceded by white space ... allows array syntax like foo[x] to
	be used in a comment without attempting to link to a class named 'x'.

2017-04-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Version: 1.25.0 release
	* Documentation/ReleaseNotes.gsdoc: update for release
	* Documentation/news.texi: update for release
	* ANNOUNCE: regenerate
	* INSTALL: regenerate
	* NEWS: regenerate
	* README: regenerate

2017-04-09  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSPredicate.m:
        * Tests/base/NSPredicate/basic.m:
	Fixes for bug #47618.

2017-04-09  Richard Frith-Macdonald <rfm@gnu.org>

   	* Headers/Foundation/NSTask.h:
   	* Source/NSTask.m:
	Apply OSX compatibility fix for NSTask notifications (bug #49021)
	by Larry Campbell.

2017-04-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m: Fix leak spotted by David Lobron.

2017-04-01 Riccardo Mottola <rm@gnu.org>

	* Source/NSConnection.m
	Correct format specifier to char*

2017-03-17 Riccardo Mottola <rm@gnu.org>

	* Source/NSFileManager.m:(nextObject of Enumerator)
	Skip file if no valid filename could be retrieved most probably due
	to Charset mismatches, this is is more a last resort: probably a
	lossy conversion should be attempted before.

2017-03-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZones/NSTimeZones.tar: Updated with latest information.

2017-03-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: Implement NSNonLossyASCIIStringEncoding
	in a manner compatible with OSX.  Added regression tests.

2017-02-11  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSICUString.m (UTextNSStringAccess,